Commented out the inclusion of *.d in the Makefile for GMRFLib; trouble on the Mac.

--- a/gmrflib/Makefile
+++ b/gmrflib/Makefile
@@ -221,4 +221,5 @@ TAGS : $(wildcard *.c *.h)
 
 .PHONY: depend clean clean-deps uninstall install doc dummytarget 
 
-include $(dir $(DEPDIR))dependencies.d $(wildcard $(dir $(DEPDIR))*.d)
+## trouble on the mac with this
+##include $(dir $(DEPDIR))dependencies.d $(wildcard $(dir $(DEPDIR))*.d)
