Update spde tutorial files

--- a/tutorials/spde/Makefile
+++ b/tutorials/spde/Makefile
@@ -1,10 +1,15 @@
+RnwSOURCES = $(wildcard *.Rnw)
+texDepends = spde-tutorial.tex spde-tutorial-introduction.tex $(RnwSOURCES:.Rnw=.tex) 
+
 all : spde-tutorial.pdf
 
-%.tex : %.Rnw
-	R CMD BATCH runCacheSweaveSPDEtutorial.R /dev/stdout </dev/null
+spde-tutorial.pdf : $(texDepends)
+	@echo generating spde-tutorial.pdf
+	latexmk spde-tutorial.tex -pdf -recorder -bibtex </dev/null
 
-%.pdf : %.tex
-	latexmk -pdf -recorder -bibtex $< </dev/null
+%.tex : %.Rnw 
+	@echo generating file $@
+	@R --vanilla -e 'Sweave("$^")' </dev/null
 
 clean :; latexmk -C
 
