--- a/rinla/DESCRIPTION
+++ b/rinla/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: INLA
 Type: Package
-Title: Functions which allow to perform a full Bayesian analysis of structured (geo-)additive models using Integrated Nested Laplace Approximaxion
+Title: Functions which allow to perform full Bayesian analysis of latent Gaussian models using Integrated Nested Laplace Approximaxion
 Version: 0.0
 Date: 2009-01-01
 Author: Havard Rue, Sara Martino and Finn Lindgren
 Maintainer: Havard Rue <hrue@math.ntnu.no> and Finn Lindgren <finn.lindgren@gmail.com>
-Description: This package contains functions which allow to perform a full Bayesian analysis of structured (geo-)additive models using Integrated Nested Laplace Approximaxion, and is a front-end to the inla-program.
+Description: This package contains functions which allow to perform full Bayesian analysis of latent Gaussian models using Integrated Nested Laplace Approximaxion, and is a front-end to the inla-program.
 Depends: Matrix, pixmap, sp
 Suggests: numDeriv, Rgraphviz, graph, fields, rgl, mvtnorm, multicore
 ByteCompile: yes
