Need to remove the built packages afterwards; fix in install.me

--- a/utils/R/Makefile
+++ b/utils/R/Makefile
@@ -12,7 +12,7 @@ testing :;
 check :; 
 	R CMD check --no-install --no-examples INLA
 
-update:;
+updateBIN:;
 	## the output of this command must be copied
 	-for f in $$(ssh $(MAC).math.ntnu.no bin/my.otool builds/build32/local/bin/inla); do echo sync $$f; rsync -auv hrue@$(MAC).math.ntnu.no:$$f extern/mac32; done
 	-for f in $$(ssh $(MAC).math.ntnu.no bin/my.otool builds/build64/local/bin/inla); do echo sync $$f; rsync -auv hrue@$(MAC).math.ntnu.no:$$f extern/mac64; done
@@ -26,6 +26,9 @@ update:;
 	-rsync -auv hrue@inla.math.ntnu.no:builds/build32/local/bin/fmesher extern/fmesher32.linux
 	-rsync -auv hrue@inla.math.ntnu.no:builds/build64/local/bin/inla extern/inla64.linux
 	-rsync -auv hrue@inla.math.ntnu.no:builds/build64/local/bin/fmesher extern/fmesher64.linux
+
+updateREPO:;
+	## the output of this command must be copied
 	-hg --cwd inla pull; hg --cwd inla update
 
-.PHONY: update local install testing check
+.PHONY: updateBIN updateREPO local install testing check
