--- a/utils/Makefile
+++ b/utils/Makefile
@@ -38,14 +38,14 @@ update-REPO:;
 	make MAC=$(MAC) -C R updateREPO
 
 update-r-inla.org :;
-	rsync -auvL --delete google-code/inla/r-inla.org/. www/r-inla.org/.
+	-rsync -auvL --delete google-code/inla/r-inla.org/. www/r-inla.org/.
 
 update-build-yourself :;
-	rsync -auv --exclude 'mc.tgz' --exclude 'my-laptop.tgz' build-yourself/.  www/build-yourself/.
+	-rsync -auv --exclude 'mc.tgz' --exclude 'my-laptop.tgz' build-yourself/.  www/build-yourself/.
 
 www :;
 	$(MAKE) update-r-inla.org
-	rsync -auvL www/. ~/www/www.inla/. 
+	-rsync -auvL www/. ~/www/www.inla/. 
 
 Rinla-local :;
 	make update-inla
@@ -65,14 +65,14 @@ Rinla-testing :;
 	make update-R
 	make MAC=$(MAC) -C R testing
 	make www
-	do-rsync-www
+	-do-rsync-www
 	-gnome-terminal -e 'ssh -t hrue@inla.math.ntnu.no "source .bash_profile; source .bashrc; sudo ls; cd; cd tmp; test -f INLA.tgz && rm INLA.tgz; wget http://www.math.ntnu.no/inla/binaries/testing/INLA.tgz; sudo R CMD INSTALL --library=/usr/local/lib/R/site-library INLA.tgz; sudo ~hrue/bin/fix-permissions /usr/local/lib/R/site-library"'
 
 Rinla-testing-Ronly :;
 	make update-REPO
 	make MAC=$(MAC) -C R testing
 	make www
-	do-rsync-www
+	-do-rsync-www
 	-gnome-terminal -e 'ssh -t hrue@inla.math.ntnu.no "source .bash_profile; source .bashrc; sudo ls; cd; cd tmp; test -f INLA.tgz && rm INLA.tgz; wget http://www.math.ntnu.no/inla/binaries/testing/INLA.tgz; sudo R CMD INSTALL --library=/usr/lib64/R/library INLA.tgz; sudo ~hrue/bin/fix-permissions /usr/lib64/R/library"'
 
 .PHONY: build-configs update-inla update-R update-REPO update-r-inla.org update-build-yourself all default www Rinla-testing Rinla Rinla-install
