add inla-spde-how-to-in-few-pages files

--- a/tutorials/spde/Makefile
+++ b/tutorials/spde/Makefile
@@ -1,21 +1,20 @@
 RnwSOURCES = $(wildcard *.Rnw)
-texDepends = updates.tex spde-tutorial.tex spde-tutorial-introduction.tex $(RnwSOURCES:.Rnw=.tex) spde-tutorial.bib
+texDepends = updates.tex spde-tutorial.tex spde-tutorial-introduction.tex spde-tutorial-spde-results.tex $(RnwSOURCES:.Rnw=.tex) spde-tutorial.bib spde-tutorial-functions.R
 
 all : spde-tutorial.pdf
 
 spde-tutorial.pdf : $(texDepends)
-	@echo generating spde-tutorial.pdf
-	latexmk spde-tutorial.tex -pdf -recorder -bibtex </dev/null
+        @echo generating spde-tutorial.pdf
+        latexmk spde-tutorial.tex -pdf -recorder -bibtex </dev/null
 
-%.tex : %.Rnw 
-	@echo generating file $@
-	@R --vanilla -e 'Sweave("$^")' </dev/null
+%.tex : %.Rnw
+        @echo generating file $@
+        @R --vanilla -e 'Sweave("$^")' </dev/null
 
 install:; distill spde-tutorial.pdf
-	cp spde-tutorial.pdf ../../../inla/r-inla.org/tutorials/spde/spde-tutorial.pdf
+        cp spde-tutorial.pdf ../../../inla/r-inla.org/tutorials/spde/spde-tutorial.pdf
 
 clean :; latexmk -C
 
 .PHONY: clean install
-
 
