--- a/inla-remote/Makefile
+++ b/inla-remote/Makefile
@@ -1,6 +1,6 @@
 SHELL=/bin/bash
 
-all : inla.remote inla.remote.cygwin
+all : inla.remote inla.remote.cygwin inla.get inla.get.cygwin inla.submit inla.submit.cygwin
 
 inla.remote : inla.remote.core
 	rm -f $@
@@ -8,6 +8,26 @@ inla.remote : inla.remote.core
 	chmod 755 $@
 
 inla.remote.cygwin : inla.remote.core
+	rm -f $@
+	{ echo '#!/usr/bin/env.exe bash.exe'; echo; echo "CYGWIN=1"; echo; cat $^; } > $@
+	chmod 755 $@
+
+inla.get : inla.get.core
+	rm -f $@
+	{ echo '#!/usr/bin/env bash'; echo; echo "CYGWIN=0"; echo; cat $^; } > $@
+	chmod 755 $@
+
+inla.get.cygwin : inla.get.core
+	rm -f $@
+	{ echo '#!/usr/bin/env.exe bash.exe'; echo; echo "CYGWIN=1"; echo; cat $^; } > $@
+	chmod 755 $@
+
+inla.submit : inla.submit.core
+	rm -f $@
+	{ echo '#!/usr/bin/env bash'; echo; echo "CYGWIN=0"; echo; cat $^; } > $@
+	chmod 755 $@
+
+inla.submit.cygwin : inla.submit.core
 	rm -f $@
 	{ echo '#!/usr/bin/env.exe bash.exe'; echo; echo "CYGWIN=1"; echo; cat $^; } > $@
 	chmod 755 $@
