--- a/utils/Makefile
+++ b/utils/Makefile
@@ -44,7 +44,7 @@ update-build-yourself :;
 
 www :;
 	$(MAKE) update-r-inla.org
-	-rsync -auv www/. ~/www/www.inla/. 
+	-rsync -auv --delete www/. ~/www/www.inla/. 
 
 Rinla-local :;
 	make update-inla
